other/mutate-large-termination-gps/.chainsaw-test/cronjob-patched.yaml

apiVersion: batch/v1
kind: CronJob
metadata:
  name: cronjob01
spec:
  schedule: "* * * * *"
  jobTemplate:
    spec:
      template:
        spec:
          containers:
          - name: busybox
            image: busybox:1.35
          terminationGracePeriodSeconds: 50
          restartPolicy: OnFailure
