other/mutate-large-termination-gps/.chainsaw-test/pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: pod01
spec:
  containers:
  - name: busybox
    image: busybox:1.35
  terminationGracePeriodSeconds: 51
---
apiVersion: v1
kind: Pod
metadata:
  name: pod02
spec:
  containers:
  - name: busybox
    image: busybox:1.35
  terminationGracePeriodSeconds: 20
---
apiVersion: v1
kind: Pod
metadata:
  name: pod03
spec:
  containers:
  - name: busybox
    image: busybox:1.35
