other/mutate-large-termination-gps/.chainsaw-test/policy-ready.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: mutate-termination-grace-period-seconds
status:
  conditions:
  - reason: Succeeded
    status: "True"
    type: Ready
