other/mutate-large-termination-gps/.chainsaw-test/chainsaw-test.yaml
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  creationTimestamp: null
  name: mutate-large-termination-gps
spec:
  steps:
  - name: step-01
    try:
    - apply:
        file: ../mutate-large-termination-gps.yaml
    - assert:
        file: policy-ready.yaml
  - name: step-02
    try:
    - apply:
        file: pod.yaml
    - apply:
        file: podcontroller.yaml
  - name: step-03
    try:
    - assert:
        file: pod-patched01.yaml
    - assert:
        file: deploy-patched.yaml
    - assert:
        file: cronjob-patched.yaml
    - error:
        file: pod-not-patched01.yaml
    - error:
        file: pod-not-patched02.yaml
